--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ author_profile: true
 permalink: /
 header:
   overlay_color: "#5e616c"
-  overlay_image: /assets/images/mm-home-page-feature.jpg
+  overlay_image: /assets/image/earth.jpg
   actions:
     - label: "Resume"
       url: "/docs/quick-start-guide/"
