--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@ header:
     - label: "Resume"
       url: "/docs/quick-start-guide/"
 excerpt: >
-  A flexible two-column Jekyll theme. Perfect for building personal sites, blogs, and portfolios.<br />
+  Hello and welcome to my website. This website is still under construction.<br />
   <small><a href="https://github.com/mmistakes/minimal-mistakes/releases/tag/4.17.2">Latest release v4.17.2</a></small>
 feature_row:
   - image_path: /assets/images/mm-customizable-feature.png
-    alt: "custom"
     title: "Super customizable"
     excerpt: "Everything from the menus, sidebars, comments, and more can be configured or set with YAML Front Matter."
     url: "/docs/configuration/"
