--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ excerpt: >
   <small><a href="https://github.com/mmistakes/minimal-mistakes/releases/tag/4.17.2">Latest release v4.17.2</a></small>
 feature_row:
   - image_path: /assets/images/mm-customizable-feature.png
+    alt: "First document"
     title: "Super customizable"
     excerpt: "Everything from the menus, sidebars, comments, and more can be configured or set with YAML Front Matter."
     url: "/docs/configuration/"
