--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@ header:
   actions:
     - label: "Resume"
       url: "/docs/quick-start-guide/"
+    - label: "Resume 2"
+      url: "/docs/quick-start-guide/"
 excerpt: >
   Hello and welcome to my website. This website is still under construction.<br />
   <small><a href="https://github.com/mmistakes/minimal-mistakes/releases/tag/4.17.2">Latest release v4.17.2</a></small>
