--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ header:
   overlay_image: /assets/image/earth.jpg
   actions:
     - label: "Resume"
-      url: "index.html"
+      url: "www.bradleyargauer.com"
     - label: "Resume 2"
       url: "/docs/quick-start-guide/"
 excerpt: >
